Bug 359449 - gradient on SVG text sometimes using incorrect bounding box. r=scootermorris, sr=roc